# Simple-POAM-Tracker-Desktop-v3

./: .gitignore  BRAND_GUIDELINES.md  README-DOD-DEPLOYMENT.md  index.html  package-lock.json  package.json  tailwind.config.js  temp_settings.tsx  temp_settings_end.txt  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: settings.local.json
STIG/: IEMS-Application-ASDST Checklist.ckl
data/: nessus.txt
scripts/: README-ICONS.md  generate-icons.mjs  generate-icons.ps1
src/: App.css.bak  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  date_utils.rs  lib.rs  models.rs  security.rs  stig.rs
src-tauri/src/database/: baseline_controls.rs  control_poam_associations.rs  group_baseline_controls.rs  groups.rs  mod.rs  nessus.rs  notes.rs  poams.rs  security_test_plans.rs  setup.rs  stig_files.rs  stig_mappings.rs  systems.rs  utils.rs
src/components/about/: About.tsx  index.ts
src/components/calendar/: Calendar.css  (+1 more)
src/context/: AppLockContext.tsx  NotificationContext.tsx  SystemContext.tsx  TabContext.tsx  ThemeContext.tsx  ToastContext.tsx
src/hooks/: useNotificationGenerator.ts  useSecurityTestPlans.ts
src/lib/: utils.ts
src/styles/: animations.css  base.css  components.css  globals.css  layout.css  main.css  modal.css  patterns.css  responsive.css  utilities.css  variables.css
src/types/: Milestone.ts  appLock.ts  group.ts  notes.ts  notification.ts  stig.ts
src/utils/: dateUtils.ts  tauriApi.ts
(+122 files in other folders)
